--- a/agreements_in_actor_space.ipynb
+++ b/agreements_in_actor_space.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "10461690",
    "metadata": {},
    "outputs": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "id": "96cf0757",
    "metadata": {},
    "outputs": [
@@ -108,7 +108,7 @@
        "KMeans(n_clusters=152)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +121,6 @@
     "for row in data_dict['matrix']:\n",
     "    X.append(row)\n",
     "    \n",
-    "train_x\n",
     "    \n",
     "kmeans = KMeans(n_clusters=152)\n",
     "kmeans.fit(X)\n"
@@ -129,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "id": "1cde1e09",
    "metadata": {},
    "outputs": [
@@ -137,7 +136,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 5  8  6 ...  0 19 11]\n"
+      "[ 1  7  7 ... 65 39 66]\n"
      ]
     }
    ],
@@ -147,12 +146,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "51b97df9",
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Agreement', '987', '', 'AGT_987', 'Framework-substantive, partial', 'Annex V, Protocol on Economic Relations, Israeli\\xad Palestinian Interim Agreement on The West Bank and the Gaza Strip (Oslo II)', '', 'Israel/Palestine', 'ISR', '', '', '', '', '', 'The annex details the jurisdictions and limitations on taxation of Palestinian and Israeli inhabitants in both Israel and Palestine, how cross border taxation functions, the transfer of funds from Israel for administration, etc. ', '1995-09-28', '1995.0', '9.0', '28.0', 'September', '63.0', 'Israel-Palestine peace process', '', 'https://www.peaceagreements.org/view/987', 'https://www.peaceagreements.org/viewmasterdocument/987']\n",
+      "\n",
+      "['Agreement', '984', '', 'AGT_984', 'Framework-substantive, partial', 'Annex II, Protocol Concerning Elections, Israeli Palestinian Interim Agreement on The West Bank and the Gaza Strip (Oslo II)', '', 'Israel/Palestine', 'ISR', '', '', '', '', '', \"Annex dealing with elections for the Palestinian Council and the Ra'ees [President/head].\", '1995-09-28', '1995.0', '9.0', '28.0', 'September', '63.0', 'Israel-Palestine peace process', '', 'https://www.peaceagreements.org/view/984', 'https://www.peaceagreements.org/viewmasterdocument/984']\n",
+      "\n",
+      "['Agreement', '985', '', 'AGT_985', 'Framework-substantive, partial', 'Annex III, Concerning Civil Affairs, Israeli\\xad Palestinian Interim Agreement on The West Bank and the Gaza Strip (Oslo II)', '', 'Israel/Palestine', 'ISR', '', '', '', '', '', 'This appendix to the Oslo II accords contains provisions regarding civil affairs such as transferal of government to the Palestinian Council; segments of responsibility and the division of the West Bank into the Areas A, B, and C, among other aspects.', '1995-09-28', '1995.0', '9.0', '28.0', 'September', '63.0', 'Israel-Palestine peace process', '', 'https://www.peaceagreements.org/view/985', 'https://www.peaceagreements.org/viewmasterdocument/985']\n",
+      "\n",
+      "['Agreement', '410', '', 'AGT_410', 'Framework-substantive, partial', \"Israeli-Palestinian Interim Agreement on the West Bank and the Gaza Strip ('Oslo II')\", '', 'Israel/Palestine', 'ISR', '', '', '', '', '', '', '1995-09-28', '1995.0', '9.0', '28.0', 'September', '63.0', 'Israel-Palestine peace process', '', 'https://www.peaceagreements.org/view/410', 'https://www.peaceagreements.org/viewmasterdocument/410']\n",
+      "\n",
+      "['Agreement', '33', '', 'AGT_33', 'Pre-negotiation', 'Letter of Invitation to Madrid Peace Conference', '', 'Israel/(Palestine)', 'ISR', '', '', '', '', '', 'The breakup of the Soviet Union and the Gulf War reshaped the basic political order of the Middle East. In an attempt to take advantage of this change, US Secretary of State James Baker made eight trips to the region in the eight months following the Gulf War. The Madrid Invitation, inviting Israel, Syria, Lebanon, Jordan and the Palestinians to an opening conference represents the result of this shuttle diplomacy. The invitation, an outcome of compromises by all sides, details the structure of the Madrid process: \\n\\nAn opening conference having no power to impose solutions \\nBilateral talks with the Arab states bordering Israel, \\nTalks with the Palestinians on 5-year interim self-rule, to be followed by talks on the permanent status \\nMultilateral talks on key regional issues, like refugees. \\nThe following is the complete text of the invitation to the Madrid Peace Conference on October 30, 1991, jointly issued by the U.S. and the Soviet Union: The co-sponsors believe that those negotiations should focus on region-wide issues of water, refugee issues, environment, economic development, and other subjects of mutual interest.', '1991-10-30', '1991.0', '10.0', '30.0', 'October', '63.0', 'Israel-Palestine peace process', '', 'https://www.peaceagreements.org/view/33', 'https://www.peaceagreements.org/viewmasterdocument/33']\n",
+      "\n",
+      "['Agreement', '989', '', 'AGT_989', 'Framework-substantive, partial', 'Annex VII, Release of Palestinian Prisoners and Detainees, Israeli\\xad Palestinian Interim Agreement on The West Bank and the Gaza Strip (Oslo II)', '', 'Israel/Palestine', 'ISR', '', '', '', '', '', 'Annex to the Oslo II Agreement containing provisions and qualifying factors for prisoner releases.', '1995-09-28', '1995.0', '9.0', '28.0', 'September', '63.0', 'Israel-Palestine peace process', '', 'https://www.peaceagreements.org/view/989', 'https://www.peaceagreements.org/viewmasterdocument/989']\n",
+      "\n",
+      "['Agreement', '988', '', 'AGT_988', 'Framework-substantive, partial', 'Annex VI, Protocol Concerning Israeli \\xadPalestinian Cooperation Programs, Israeli\\xad Palestinian Interim Agreement on The West Bank and the Gaza Strip (Oslo II)', '', 'Israel/Palestine', 'ISR', '', '', '', '', '', 'Annex to Oslo II Agreement outlining areas of cooperation between Israel and Palestine including cooperation on education and training as well as cultural and social exchanges.', '1995-09-28', '1995.0', '9.0', '28.0', 'September', '63.0', 'Israel-Palestine peace process', '', 'https://www.peaceagreements.org/view/988', 'https://www.peaceagreements.org/viewmasterdocument/988']\n",
+      "\n",
+      "['Agreement', '587', '', 'AGT_587', 'Implementation', 'Sharm El Sheikh Memorandum: Implementation Timeline of Outstanding Commitments of Agreements Signed and the Resumption of Permanent Status Negotiations', '', 'Israel/Palestine', 'ISR', '', '', '', '', '', 'The Parties commit to resume permanent status negotiations in an accelerated manner, review the Hebron situation, and increase the possibilities of access and mobility including the enabling of construction on the Gaza Sea Port.', '1999-09-04', '1999.0', '9.0', '4.0', 'September', '63.0', 'Israel-Palestine peace process', '', 'https://www.peaceagreements.org/view/587', 'https://www.peaceagreements.org/viewmasterdocument/587']\n",
+      "\n",
+      "['Agreement', '983', '', 'AGT_983', 'Framework-substantive, partial', 'Annex I, Protocol Concerning Redeployment and Security Arrangements, Israeli\\xad Palestinian Interim Agreement on The West Bank and the Gaza Strip (Oslo II)', '', 'Israel/Palestine', 'ISR', '', '', '', '', '', \"The Oslo II Accords created the areas of A, B, and C. The PA was granted limited authority in the A and B Areas, whereas Israel maintained a military presence in Area C, airspace and ocean territories. Annex I focuses on security arrangements including the redeployment of Israeli forces; the administration of security forces in Palestine; setting up 'liason' and 'cooperation' committees on the district and regional levels; outlining joint security arrangements including Joint Mobile Units; outlining the jurisdiction of Israeli and Palestinian security forces, arranging the armament of Palestinian police; detailing the protocols for border crossings, among other aspects.\", '1995-09-28', '1995.0', '9.0', '28.0', 'September', '63.0', 'Israel-Palestine peace process', '', 'https://www.peaceagreements.org/view/983', 'https://www.peaceagreements.org/viewmasterdocument/983']\n",
+      "\n",
+      "['Agreement', '986', '', 'AGT_986', 'Framework-substantive, partial', 'Annex IV, Protocol Concerning Legal Affairs, Israeli\\xad Palestinian Interim Agreement on The West Bank and the Gaza Strip (Oslo II)', '', 'Israel/Palestine', 'ISR', '', '', '', '', '', 'Annex to Oslo II Process detailing the protocols and jurisdictions of Israeli/Palestinian police and courts, including provisions on outlining protocol on nationality, cross-border crimes and protocol in regards to witnesses in Palestinian and Israeli territory.', '1995-09-28', '1995.0', '9.0', '28.0', 'September', '63.0', 'Israel-Palestine peace process', '', 'https://www.peaceagreements.org/view/986', 'https://www.peaceagreements.org/viewmasterdocument/986']\n",
+      "\n",
+      "['Agreement', '36', '', 'AGT_36', 'Pre-negotiation', 'Protocol on Economic Relations', '', 'Israel/Palestine', 'ISR', '', '', '', '', '', 'to be incorporated into Gaza-Jericho agmt, and take effect on its signing. Parties agree to establish Joint Economic Committee\\n\\nAgreement to be incorporated into the Gaza-Jericho Agreement, and outlines the economic relations between Israel and Palestine, including the establishment of a Joint Economic Committeee, the establishment of import/export duties, monetary and financial duties, taxation, local production, labor regulation, agricultural production, industry, tourism and insurance.', '1994-04-29', '1994.0', '4.0', '29.0', 'April', '63.0', 'Israel-Palestine peace process', '', 'https://www.peaceagreements.org/view/36', 'https://www.peaceagreements.org/viewmasterdocument/36']\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "test_indices = [i for i,v in enumerate(kmeans.labels_) if v==12]\n",
     "\n",
@@ -269,7 +297,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
